<resources>
    <string name="app_name">GNSS Navigation Status</string>
    <string name="title_sat_map">Satellitenkarte</string>
    <string name="title_sat_table">Satellitentabelle</string>
    <string name="title_legend">Legende</string>
    <string name="title_positional_data">Meine Positionsdaten</string>
    <string name="title_time">Zeit</string>
    <string name="title_longitude">Längengrad</string>
    <string name="title_latitude">Breitengrad</string>
    <string name="title_height">Höhe [m]</string>
    <string name="title_horizontal_acc">Horizontale Genauigkeit [cm]</string>
    <string name="title_vertical_acc">Vertikale Genauigkeit [cm]</string>
    <string name="title_number_sats">Verwendete Satelliten (Gesamt):</string>
    <string name="title_gnss_fix_ok">GnssFixOk:</string>
    <string name="text_number_sats">0 (0)</string>
    <string name="text_gnss_fix_ok">0</string>
    <string name="title_opt_button">Jetzt Optimieren</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_settings">Einstellungen</string>
    <string name="title_used_systems">Verwendete Satellitensysteme</string>
    <string name="title_optimization">Genauigkeitsoptimierung</string>
    <string name="GPS_text">GPS</string>
    <string name="GLO_text">GLONASS</string>
    <string name="BDS_text">BeiDou</string>
    <string name="GAL_text">Galileo</string>
    <string name="RTCM_enable_text">RTCM aktivieren/deaktivieren</string>
    <string name="empty_string"> </string>
    <string name="switch_state">switch_state</string>
    <string name="table_header_id">ID</string>
    <string name="table_header_type">TYP</string>
    <string name="table_header_azim">AZIM</string>
    <string name="table_header_elev">ELEV</string>
    <string name="table_header_signal_strength">C/N</string>
    <string name="title_ip_address">IP-Adresse des Rovers</string>
    <string name="connect_button_text">Verbinden</string>
    <string name="id_tv_text">id_tv</string>
    <string name="icon_descr">Placeholder for Satellite Icon</string>
    <string name="satellite_type_text">satellitentyp</string>
    <string name="azimut_text">azim</string>
    <string name="elevation_text">elev</string>
    <string name="signal_strength_text">cn</string>
    <string name="connection_status_text">Verbunden</string>
    <string name="galileo_symbol_descr">galileo_symbol</string>
    <string name="glonass_symbol_descr">glonass_symbol</string>
    <string name="beidou_symbol_descr">beidou_symbol</string>
    <string name="gps_symbol_descr">gps_symbol</string>
    <string name="title_rtcm">RTCM</string>
    <string name="title_status">Status:</string>
    <string name="title_ref_station">Verwendete Referenzstation:</string>
    <string name="title_rtcm_used">Verwendet</string>
    <string name="ref_station_text">keine</string>
    <string name="title_fix_type">Fixtyp:</string>
    <string name="text_fix_type">Kein Fix</string>
    <string name="title_connection_status">Verbindungsstatus:</string>
</resources>