<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.map.MapFragment">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/GAL_text"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/position_title"
        app:layout_constraintEnd_toStartOf="@+id/beidou_symbol"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/galileo_symbol"
        app:layout_constraintTop_toBottomOf="@+id/legend_title"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/legend_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_legend"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/position_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.867" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/BDS_text"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/position_title"
        app:layout_constraintEnd_toStartOf="@+id/GLONASS_symbol"
        app:layout_constraintTop_toBottomOf="@+id/legend_title"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/GLO_text"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/position_title"
        app:layout_constraintEnd_toStartOf="@+id/GPS_symbol"
        app:layout_constraintTop_toBottomOf="@+id/legend_title"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/GPS_text"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/position_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/legend_title"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/position_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="248dp"
        android:text="@string/title_positional_data"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:stretchColumns="0,1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position_title"
        app:layout_constraintVertical_bias="0.155">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_time"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15:00"
                android:textAlignment="textEnd"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/long_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_longitude"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/long_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9,0895944° W"
                android:textAlignment="textEnd"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/lat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_latitude"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/lat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="49,0664009° W"
                android:textAlignment="textEnd"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/height_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_height"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/height_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="43m"
                android:textAlignment="textEnd"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/horiz_acc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_horizontal_acc"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/horiz_acc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textAlignment="textEnd"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/vert_acc_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_vertical_acc"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/vert_acc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textAlignment="textEnd"
                android:textColor="#000000" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/map"
        android:layout_width="352dp"
        android:layout_height="303dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_karte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/galileo_symbol"
        android:layout_width="18dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_circle_24px"
        app:layout_constraintBottom_toTopOf="@+id/position_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/legend_title"
        app:layout_constraintVertical_bias="0.325" />

    <ImageView
        android:id="@+id/beidou_symbol"
        android:layout_width="18dp"
        android:layout_height="19dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_hexagon_24px"
        app:layout_constraintBottom_toTopOf="@+id/position_title"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/legend_title"
        app:layout_constraintVertical_bias="0.325" />

    <ImageView
        android:id="@+id/GLONASS_symbol"
        android:layout_width="18dp"
        android:layout_height="19dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_square_24px"
        app:layout_constraintBottom_toTopOf="@+id/position_title"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/legend_title"
        app:layout_constraintVertical_bias="0.325" />

    <ImageView
        android:id="@+id/GPS_symbol"
        android:layout_width="18dp"
        android:layout_height="19dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/ic_triangle_24px"
        app:layout_constraintBottom_toTopOf="@+id/position_title"
        app:layout_constraintEnd_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/legend_title"
        app:layout_constraintVertical_bias="0.325" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:enabled="true"
        android:src="@drawable/ic_filter_alt_24px"
        android:tintMode="multiply"
        app:backgroundTint="#FFFFFF"
        app:elevation="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:tint="#FFFFFF" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        android:src="@drawable/ic_update_24px"
        android:tintMode="multiply"
        app:backgroundTint="#FFFFFF"
        app:elevation="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:tint="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>